FCC Sizing Update Code 1

--- a/templates/Valve Selection.html
+++ b/templates/Valve Selection.html
@@ -228,12 +228,12 @@
 
                     <div class="col-3">
                       <select name="" id="" style="width: 50px;height:25px;">
-                        <option value="">bar</option>
-                        <option value="">KPa</option>
-                        <option value="">MPa</option>
-                        <option value="">Pa</option>
-                        <option value="">kg/cm²</option>
-                        <option value="">psi</option>
+                        <option value="bar">bar</option>
+                        <option value="kpa">KPa</option>
+                        <option value="mpa">MPa</option>
+                        <option value="pa">Pa</option>
+                        <option value="kg/cm2">kg/cm²</option>
+                        <option value="psia">psi</option>
                       </select>
                     </div>
 
@@ -246,28 +246,28 @@
 
                     <div class="col-3">
                       <select name="" id="" style="width: 50px;height:25px;">
-                        <option value="">bar(g)</option>
-                        <option value="">bar(a)</option>
-                        <option value="">KPa(a)</option>
-                        <option value="">KPa(g)</option>
-                        <option value="">MPa(a)</option>
-                        <option value="">MPa(g)</option>
-                        <option value="">Pa(a)</option>
-                        <option value="">Pa(g)</option>
-                        <option value="">in H2O(a)</option>
-                        <option value="">in H2O(g)</option>
-                        <option value="">in Hg(a)</option>
-                        <option value="">in Hg(g)</option>
-                        <option value="">kg/cm²(a)</option>
-                        <option value="">kg/cm²(g)</option>
+                        <option value="bar">bar(g)</option>
+                        <option value="bar">bar(a)</option>
+                        <option value="kpa">KPa(a)</option>
+                        <option value="kpa">KPa(g)</option>
+                        <option value="mpa">MPa(a)</option>
+                        <option value="mpa">MPa(g)</option>
+                        <option value="pa">Pa(a)</option>
+                        <option value="pa">Pa(g)</option>
+                        <option value="inh20">in H2O(a)</option>
+                        <option value="inh20">in H2O(g)</option>
+                        <option value="inhg">in Hg(a)</option>
+                        <option value="inhg">in Hg(g)</option>
+                        <option value="kg/cm2">kg/cm²(a)</option>
+                        <option value="kg/cm2">kg/cm²(g)</option>
                         <option value="">m H20(a)</option>
-                        <option value="">m H20(g)</option>
-                        <option value="">mbar(a)</option>
-                        <option value="">mbar(g)</option>
-                        <option value="">mm Hg(a)</option>
-                        <option value="">mm Hg(g)</option>
-                        <option value="">psi(a)</option>
-                        <option value="">psi(g)</option>
+                        <option value="mmh20">m H20(g)</option>
+                        <option value="mbar">mbar(a)</option>
+                        <option value="mbar">mbar(g)</option>
+                        <option value="mmhg">mm Hg(a)</option>
+                        <option value="mmhg">mm Hg(g)</option>
+                        <option value="psia">psi(a)</option>
+                        <option value="psia">psi(g)</option>
                       </select>
                     </div>
 
@@ -280,10 +280,10 @@
 
                     <div class="col-3">
                       <select name="" id="" style="width: 50px;height:25px;">
-                        <option value="">°C</option>
-                        <option value="">°F</option>
-                        <option value="">K</option>
-                        <option value="">R</option>
+                        <option value="C">°C</option>
+                        <option value="F">°F</option>
+                        <option value="K">K</option>
+                        <option value="R">R</option>
                       </select>
                     </div>
                     <div class="col-6" style='text-align: right;'>
@@ -296,10 +296,10 @@
 
                     <div class="col-3">
                       <select name="" id="" style="width: 50px;height:25px;">
-                        <option value="">°C</option>
-                        <option value="">°F</option>
-                        <option value="">K</option>
-                        <option value="">R</option>
+                        <option value="C">°C</option>
+                        <option value="F">°F</option>
+                        <option value="K">K</option>
+                        <option value="R">R</option>
                       </select>
                     </div>
                   </div>
