Liquid-Gas pages, remove redundancy, add in VS page

--- a/templates/Valve Selection.html
+++ b/templates/Valve Selection.html
@@ -163,17 +163,17 @@
                   <h5 class="" style="text-align: left" ;>Pressure-Temperature Rating</h5>
 
                   <div class="row" style="margin-top:20px;">
-                    <div class="col-6" style='text-align: right;'>
-                      <label for="ratingP">Rating</label>
-                    </div>
-                    <div class="col-3">
-                      <select name="ratingP" id="ratingP" style="width: 120px;height:25px;">
-                        {% for i in data[0] %}
-                          <option value="{{i.id}}">ASME {{i.size}}</option>
-                        {% endfor %}
-                      </select>
-                    </div>
-                    <div class="col-3"> </div>
+<!--                    <div class="col-6" style='text-align: right;'>-->
+<!--                      <label for="ratingP">Rating</label>-->
+<!--                    </div>-->
+<!--                    <div class="col-3">-->
+<!--                      <select name="ratingP" id="ratingP" style="width: 120px;height:25px;">-->
+<!--                        {% for i in data[0] %}-->
+<!--                          <option value="{{i.id}}">ASME {{i.size}}</option>-->
+<!--                        {% endfor %}-->
+<!--                      </select>-->
+<!--                    </div>-->
+<!--                    <div class="col-3"> </div>-->
                     <div class="col-6" style='text-align: right;'>
                       <label for="bMaterial">Body Material</label>
                     </div>
@@ -329,41 +329,41 @@
                   </div>
 
 
-                  <div class="col-7" style='text-align: right;'>
-                    <label for="vSize">Valve Size</label>
-                  </div>
-                  <div class="col-5">
-                    <select name="vSize" id="vSize" style="width: 100px;height:25px;">
-                      {% for i in data[3] %}
-                        <option value="{{i.id}}">{{i.size}}</option>
-                      {% endfor %}
-                    </select>
-                  </div>
+<!--                  <div class="col-7" style='text-align: right;'>-->
+<!--                    <label for="vSize">Valve Size</label>-->
+<!--                  </div>-->
+<!--                  <div class="col-5">-->
+<!--                    <select name="vSize" id="vSize" style="width: 100px;height:25px;">-->
+<!--                      {% for i in data[3] %}-->
+<!--                        <option value="{{i.id}}">{{i.size}}</option>-->
+<!--                      {% endfor %}-->
+<!--                    </select>-->
+<!--                  </div>-->
 
 
-                  <div class="col-7" style='text-align: right;'>
-                    <label for="ratingV">Rating</label>
-                  </div>
-                  <div class="col-5">
-                    <select name="ratingV" id="ratingV" style="width: 100px;height:25px;">
-                      {% for i in data[0] %}
-                        <option value="{{i.id}}">{{i.size}}</option>
-                      {% endfor %}
-                    </select>
-                  </div>
+<!--                  <div class="col-7" style='text-align: right;'>-->
+<!--                    <label for="ratingV">Rating</label>-->
+<!--                  </div>-->
+<!--                  <div class="col-5">-->
+<!--                    <select name="ratingV" id="ratingV" style="width: 100px;height:25px;">-->
+<!--                      {% for i in data[0] %}-->
+<!--                        <option value="{{i.id}}">{{i.size}}</option>-->
+<!--                      {% endfor %}-->
+<!--                    </select>-->
+<!--                  </div>-->
 
 
-                  <div class="col-7" style='text-align: right;'>
-                    <label for="cv">Rated Cv</label>
-                  </div>
-                  <div class="col-5">
-                    <select name="cv" id="cv" style="width: 100px;height:25px;">
-                      <option value="">1</option>
-                      <option value="">2</option>
-                      <option value="">3</option>
-                      <option value="">4</option>
-                    </select>
-                  </div>
+<!--                  <div class="col-7" style='text-align: right;'>-->
+<!--                    <label for="cv">Rated Cv</label>-->
+<!--                  </div>-->
+<!--                  <div class="col-5">-->
+<!--                    <select name="cv" id="cv" style="width: 100px;height:25px;">-->
+<!--                      <option value="">1</option>-->
+<!--                      <option value="">2</option>-->
+<!--                      <option value="">3</option>-->
+<!--                      <option value="">4</option>-->
+<!--                    </select>-->
+<!--                  </div>-->
 
                   <div class="col-7" style='text-align: right;'>
                     <label for="endConnection">End Connection</label>
